# gestionAPI/routes/api.php
@@ -3,6 +3,8 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\UserController;
+use App\Http\Controllers\AuthController;
+use L5Swagger\Http\Controllers\SwaggerController;
 
 /*
 |--------------------------------------------------------------------------
@@ -15,12 +17,28 @@ use App\Http\Controllers\UserController;
 |
 */
 
-/* Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
+/* 
+Route::apiResource('users', UserController::class); */
 
-    return $request->user();
+// Ruta para obtener todos los usuarios
+Route::get('/users/list', [UserController::class, 'index']);
 
-}); */
+// Ruta para obtener un usuario por ID
+Route::get('/users/{id}', [UserController::class, 'show']);
 
+// Ruta para crear un nuevo usuario
+Route::post('/users/new', [UserController::class, 'store']);
 
+Route::post('/login', [AuthController::class, 'login']);
+Route::post('/logout', [AuthController::class, 'logout']);
 
-Route::apiResource('users', UserController::class);
+//protected
+
+Route::middleware('jwt.verify')->group(function () {
+    
+    Route::delete('/users/delete/{id}', [UserController::class, 'destroy']);
+    Route::put('/users/me/{id}', [UserController::class, 'update']);
+    Route::get('/documentation', [SwaggerController::class, 'api']);
+    Route::get('/users/list', [UserController::class, 'index']);
+    
+});
